@@ -437,23 +437,23 @@ struct FVTerm::term_area  // define virtual terminal character properties
 {
   public:
     term_area()
-    : offset_left (0)
-    , offset_top (0)
-    , width (-1)
-    , height (-1)
-    , right_shadow (0)
-    , bottom_shadow (0)
-    , cursor_x (0)
-    , cursor_y (0)
-    , input_cursor_x (-1)
-    , input_cursor_y (-1)
-    , widget()
-    , preprocessing_call()
-    , changes (0)
-    , text (0)
-    , input_cursor_visible (false)
-    , has_changes (false)
-    , visible (false)
+      : offset_left (0)
+      , offset_top (0)
+      , width (-1)
+      , height (-1)
+      , right_shadow (0)
+      , bottom_shadow (0)
+      , cursor_x (0)
+      , cursor_y (0)
+      , input_cursor_x (-1)
+      , input_cursor_y (-1)
+      , widget()
+      , preprocessing_call()
+      , changes (0)
+      , text (0)
+      , input_cursor_visible (false)
+      , has_changes (false)
+      , visible (false)
     { }
 
     ~term_area()
